# alia-html-starter

./: CMakeLists.txt  README.md  app.js  app.wasm  asm-dom.js  index.html  style.css
.github/workflows/: deployment.yml
cmake/: alia-html.cmake  json.cmake
scripts/: run-web-server.py
src/: app.cpp  index.html  style.css
